WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182952
[iOS 11.3 Beta] Can't copy a URL from Safari and paste it into the Gmail app
https://bugs.webkit.org/show_bug.cgi?id=182952
Summary
[iOS 11.3 Beta] Can't copy a URL from Safari and paste it into the Gmail app
Wenson Hsieh
Reported
2018-02-19 19:32:02 PST
<
rdar://problem/37636190
>
Attachments
Patch
(6.65 KB, patch)
2018-02-19 20:59 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-02-19 20:59:28 PST
Created
attachment 334237
[details]
Patch
Wenson Hsieh
Comment 2
2018-02-20 10:14:38 PST
Comment on
attachment 334237
[details]
Patch Thanks for the review!
WebKit Commit Bot
Comment 3
2018-02-20 10:32:14 PST
Comment on
attachment 334237
[details]
Patch Clearing flags on attachment: 334237 Committed
r228825
: <
https://trac.webkit.org/changeset/228825
>
WebKit Commit Bot
Comment 4
2018-02-20 10:32:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug