Source/WebCore/platform/ios/PlatformPasteboardIOS.mm
@@ -384,6 +384,7 @@ void PlatformPasteboard::write(const PasteboardURL& url)
         if (!url.title.isEmpty())
             nsURL._title = url.title;
         [representationsToRegister addRepresentingObject:nsURL];
+        [representationsToRegister addRepresentingObject:(NSString *)url.url.string()];
     }
 
     registerItemToPasteboard(representationsToRegister.get(), m_pasteboard.get());
